--- a/apps/mp/pages/home/index.wxss
+++ b/apps/mp/pages/home/index.wxss
@@ -106,8 +106,7 @@ page {
   
   /* 布局 */
   display: flex;
-  justify-content: space-between;
-  align-items: center; /* 垂直居中 */
+  justify-content: center;
   
   box-sizing: border-box;
   margin-top: 10rpx; /* 离TUSK近一点 */
@@ -224,10 +223,10 @@ page {
   flex: 1;
 }
 
-.tab-icon-bg, .tab-icon {
-  font-size: 48rpx; /* 图标大小 */
+.tab-icon-img {
+  width: 48rpx;
+  height: 48rpx;
   margin-bottom: 8rpx;
-  color: #666;
 }
 
 .tab-item text {
